--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet" />
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css" />
+    <link rel="icon" href="/assets/rls.png" type="icon">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     
@@ -19,7 +20,7 @@
     <!--Header-->
     <header class="w-full h-[420px] bg-home bg-cover bg-center ">
         <div class="w-full h-full flex flex-col justify-center items-center">
-            <img src="./assets/22989542007.png" alt="" class="w-32 h-32 rounded-full shadow-lg hover:scale-110 duration-200">
+            <img src="./assets/rls.png" alt="" class="w-32 h-32 rounded-full shadow-lg hover:scale-110 duration-200">
 
             <h1 class="text-3xl mt-4 mb-2 font-bold text-white">O Poder De ficar Grande</h1>
 
